package Alerta_Cidadao.enums;

public enum TipoReacao {
    LIKE,
    DESLIKE
}
